tests/syntax/invalid/binary_literal_trailing_junk.zn
def f() {
    // error: characters adjacent to binary literal
    var x = 0b0101junk;
}
